Improve IRQ timings of Sys3/4/6/7/11, DE and the Sega 192x64 DMD-machines
Change switch writing of DE and Sega 192x64 DMD-machines
Improve sound filtering of Flash Gordon, Xenon and all Williams/Bally DCS machines, matching the real one more closely
Improve timings for GTS80 machines, especially for Rack 'em up until Tag-Team (1983-85 era)
Stabilized solenoids 16, 31, and 32 on GamePlan machines

*** ROM SUPPORT *** Thanks to Soren, ipdb.org, Silvio Finotti, tecnopinball.org, inkochnito, Carlos Paredes Compan, Matt Morin, Chad Hendrickson, Idleman, jordigahan, ClawGrip, Juan (Akiles)
New:
Jac van Ham: Formula 1
             Ice Mania
Regama: Trebol
Sport Matic: Flashman

Correct Dumps:
Bally: Doctor Who P-5, P-6 (using SP-4 U18 sound ROM); also L-2, D-2 (using SL-2 U18 sound ROM)
       Twilight Zone P-3, P-4 (using later U14 and U15 sound ROMs, only PA-1 uses SP-1 sound)
LTD: Time Machine (4 players) - confirmed that currently supported ROMs are correct

Clones:
Addams Family, The L-5C (competition MOD) (updated with LED Ghost Fix)
Big Game (MOD rev. 7)
Brave Team (Free Play)
Canasta '86' (Free Play)
Cirqus Voltaire (D.52 Prototype w/ support for old Ringmaster voice) - sound ROMs missing however
Clown (Inder, Free Play)
Corsario (Free Play)
Creature from the Black Lagoon L-4C (competition MOD) (updated with LED Ghost Fix)
Demolition Man LX-4C (competition MOD) (updated and also now includes LED Ghost Fix)
Demolition Man H-6C (competition MOD) (updated)
Dragonfist (MOD 3 rev. 1105)
Flight 2000 (modified rules rev. 3335)
Flintstones, The LX-3
Iron Man 1.85,1.86(+Vault Editions)
Junk Yard 1.2C (competition MOD) (updated)
Lap By Lap (Free Play)
Lord of the Rings, The 3.00
Meteor (Bonus Count and Sound Fix)
Meteor (Bonus Count Fix, MOD, Free Play rev. 64)
Meteor (Bonus Count Fix, MOD, 7-Digit, Free Play rev. 74)
Moon Light (Free Play)
Mundial 90 (Free Play)
Nine Ball (Ball handling MOD beta18)
Oba-Oba (old hardware)
Pool Sharks LA-7C (competition MOD) (updated)